add the userExam api, update the doc
